--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=cirebonfc1
-keyPassword=cirebonfc1
-keyAlias=key
-storeFile=E:/dicoding/flutter_app/keymovie.jks
+storePassword=
+keyPassword=
+keyAlias=
+storeFile=
